1999-03-21  Dominik Vogt  <dominik_vogt@gmx.de>

	* FvwmPager/x_pager.c (DispatchEvent): Implemented transient pager in
	a more general way (allows all three buttons to work).

1999-03-21  Dominik Vogt  <dominik_vogt@gmx.de>

	* FvwmPager/x_pager.c (InsertExpand):
	(GetBalloonLabel): Replaced macro INSERT by function InsertExpand.

	* FvwmPager/x_pager.c (DispatchEvent):
	(FvwmErrorHandler): added misssing XUngrab... to fix 'transient' option
	with mouse button 2

1999-03-21  Matthias Clasen  <clasen@mathematik.uni-freiburg.de>

	* FvwmGtk/FvwmGtk.c: Implement option menus.

Sat Mar 20 14:55:15 1999  DanEspen  <dje@blue>

	* FvwmTalk: If I did this right, the FvwmTalk directory should
	disappear.

	* FvwmForm/ReadXServer.c: Paste tab as a space when the input form
	only has one input field.

	* FvwmForm/FvwmForm.c (main): Remove the builtin customization form,
	there is now a way to do this with a standalone form definition.
	Add "UseData" command.

	* FvwmForm/FvwmForm.1: Add FvwmTalk, other cleanups.

	* FvwmForm/FormFvwmTalkHelp.: New naming rule.

	* FvwmForm/FormFvwmTalk.: New naming rule.

	* FvwmForm/FormFvwmRlogin.: New naming rule.

	* FvwmForm/FormFvwmQuitVerify.: New naming rule.

	* FvwmForm/FormFvwmForm.: New naming rule.

	* FvwmForm/FormFvwmCapture.: New naming rule.

	* FvwmForm/Makefile.am (config_DATA): Remove DefineMe.c, rename forms,
	provide FvwmTalk replacement shell.

1999-03-16  Dominik Vogt  <dominik_vogt@gmx.de>

	* FvwmTaskBar/Start.c:
	(StartButtonUpdate): new return value (needsupdate)
	* FvwmTaskBar/FvwmTaskBar.c (LoopOnEvents): fixed bug: start button
	staying depressed

	* FvwmTaskBar/Goodies.c (GoodiesParseConfig): fixed some parsing bugs

	* FvwmTaskBar/FvwmTaskBar.1: describe Mailcheck option

	* FvwmTaskBar/Goodies.c (DrawGoodies):
	(GoodiesParseConfig): implemented 'Mailcheck' option

Fri Mar 19 19:50:08 1999  Steve ROBBINS

	* FvwmEvent/Makefile.am
	* FvwmForm/Makefile.am