@@ -110,6 +110,7 @@ Charles Hines
 Paul Hudson
 Sverre H. Huseby
 Toshi Isogai
+Jesper James
 Thimo Jansen
 Albrecht Kadlec
 Michael A. Kazda
