@@ -9,19 +9,22 @@
  * whatsoever. Use this program at your own risk. Permission to use this
  * program for any purpose is given, as long as the copyright is kept intact.
  *
- *  Things to do:  Convert to C++  (In Progress)
+ *  Things to do:  use graphics contexts from fvwm
  */
 
 #include <libs/Picture.h>
+
+#define MAX_COLOUR_SETS 4
 
 /* Struct definitions */
 typedef struct button
 {
   char *title;
-  char *truncate_title; /* valid only if truncatewidth > 0 */
+  char *truncate_title;
   int up, needsupdate, tw, set, truncatewidth;
   struct button *next;
   Picture p;
+  int reliefwidth;
   long desk;
 } Button;
 
@@ -29,14 +32,12 @@ typedef struct
 {
   int count;
   Button *head,*tail;
-  int x,y,w,h;
+  int x,y,w,h,rw;
 } ButtonArray;
-
-#define MAX_COLOUR_SETS 4
 
 /* Function Prototypes */
 Button *ButtonNew(char *title, Picture *p, int up);
-void InitArray(ButtonArray *array,int x,int y,int w,int h);
+void InitArray(ButtonArray *array,int x,int y,int w,int h,int rw);
 void UpdateArray(ButtonArray *array,int x,int y,int w, int h);
 int AddButton(ButtonArray *array, char *title, Picture *p,int up);
 int UpdateButton(ButtonArray *array, int butnum, char *title, int up);
