@@ -1,3 +1,9 @@
+1999-02-22  Hippo
+
+	* FvwmWinList/* Applied patch from Jesper James: new option
+	ButtonFrameWidth to set relief width, 0 is valid. TruncateLeft always
+	works, not just with LeftJustify.	
+
 1999-03-21  Dominik Vogt  <dominik_vogt@gmx.de>
 
 	* FvwmPager/x_pager.c (DispatchEvent): Implemented transient pager in
